--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "10.0.5",
     "@angular/platform-browser-dynamic": "10.0.5",
     "@angular/router": "10.0.5",
+    "@angular/service-worker": "^10.0.6",
     "rxjs": "6.6.0",
     "tslib": "2.0.0",
     "zone.js": "0.10.3"
@@ -41,9 +42,10 @@
     "@angular-devkit/build-angular": "0.1000.4",
     "@angular/cli": "10.0.4",
     "@angular/compiler-cli": "10.0.5",
-    "@types/node": "14.0.23",
+    "@hqjs/hq": "0.0.21",
     "@types/jasmine": "3.5.11",
     "@types/jasminewd2": "2.0.8",
+    "@types/node": "14.0.23",
     "codelyzer": "6.0.0",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "5.0.2",
